Изменен баг в IE с тегом main

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ body {
   background: #000000 url(../img/general/index-bg.jpg) top center no-repeat;
 }
 
+main {
+  display: block;
+}
+
 .inner-page {
   color: #000000;
   background: #d7d5d2 url(../img/general/index-item-bg.jpg) repeat;
