--- a/css/style.css
+++ b/css/style.css
@@ -545,7 +545,9 @@ input[type="radio"].visually-hidden {
 /* MODAL */
 
 .modal {
-  display: none;
+  display: block;
+  visibility: hidden;
+  /* display: none; */
   position: fixed;
   z-index: 2;
   color: #000000;
@@ -553,7 +555,8 @@ input[type="radio"].visually-hidden {
 }
 
 .modal-show {
-  display: block;
+  visibility: visible;
+  /* display: block; */
   -webkit-animation-name: bounce;
           animation-name: bounce;
   -webkit-animation-duration: 1s;
